css fix for jumping pages

--- a/public/scss/global.scss
+++ b/public/scss/global.scss
@@ -357,7 +357,6 @@ h1 {
     top: 0;
     left: 0;
     right: 0;
-    height: 100%;
     opacity: 1;
 }
 .fade.ng-enter,
